project/logs/20250522_152221log
Hello,DirectX!

windth:1280

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel:12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.VS.hlsl,profile:vs_6_0

Compile Succeeded,path:Object3D.VS.hlsl,profile:vs_6_0_n
Begin CompileShader,path:Object3D.PS.hlsl,profile:ps_6_0

Object3D.PS.hlsl:20:20: error: use of undeclared identifier 'gMaterial'
    output.color = gMaterial.color*textureColor;
                   ^

